feat: Complete website redesign with GDPR compliance and SEO optimization
- Updated homepage: removed database-dependent mockups, added comprehensive SEO meta tags and structured data
- Created integration.html: full COPA Systeme partnership details with technical specifications
- Created impressum.html: legal imprint with company details (GDPR required)
- Created datenschutz.html: comprehensive privacy policy (GDPR compliant)
- Created agb.html: general terms and conditions
- Created PHP contact form: secure form handler with spam protection, rate limiting, and input validation for Strato hosting
- Cleaned workspace: removed duplicate CascadeProjects folder and obsolete files
- Updated .gitignore: protected sensitive files (.env, credentials)
- Created project documentation: PLANNING.md, TASK.md, PROJECT-RULES.md
- All pages use original LieferMax content, modern design, and are AI-agent friendly

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ temp/
 # OS files
 Thumbs.db
 .DS_Store
+
+# Sensitive files - credentials and passwords
+.env
+*.env
+Benutzernamen.txt
+credentials.txt
+*.credentials
