feat: Complete CMS migration - all pages migrated to Astro
- Updated Decap CMS config for GitHub OAuth authentication
- Created all Astro page components:
  * products.astro (complete with all 6 product sections)
  * integration.astro (COPA integration details)
  * contact.astro (contact form and map)
  * agb.astro, datenschutz.astro, impressum.astro (legal pages)
- Copied all product images to public/assets/images
- All 7 pages build successfully
- Ready for CMS admin setup and testing

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,9 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: eazybusiness/LieferMax
   branch: main
+  base_url: https://api.netlify.com
+  auth_endpoint: auth
 
 # Lokale Entwicklung
 local_backend: true
